--- a/client/src/styles/manageDates.scss
+++ b/client/src/styles/manageDates.scss
@@ -7,6 +7,13 @@
     flex-direction: column;
     margin-top: 2rem;
 
+    text-align: center;
+
+    h1{
+        padding-left: 1rem;
+        padding-right: 1rem;
+        font-size: 1rem;
+    }
 
     .btn{
         padding: 0.5rem 1rem;
