--- a/client/src/styles/HomeWhatsIncluded.scss
+++ b/client/src/styles/HomeWhatsIncluded.scss
@@ -13,6 +13,10 @@
             margin-top: 10px;
             display: flex;
             gap: 10px;
+            p{
+                margin:0;
+                font-size: 1rem;
+            }
 
             p{
                 font-size: 1.1rem;
@@ -32,7 +36,10 @@
                 display: flex;
                 align-items: center;
                 gap: 10px;
-
+                p{
+                    font-size: 1rem;
+                    margin:0;
+                }
                 p{
                     font-size: 1.1rem;
                 }
