--- a/client/src/styles/HomeWhatsIncluded.scss
+++ b/client/src/styles/HomeWhatsIncluded.scss
@@ -1,13 +1,15 @@
 @use '../styles/variables.scss' as *;
 
 .whatsincludedContainer{
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    overflow-x: scroll;
     margin-top: 2rem;
     margin-bottom: 1rem;
     padding: 0 0.5rem;
 
     .whatsincludedSubContainer{
+        width: 250px;
         margin: 1rem 0 0 0;
         .content{
             margin-top: 10px;
@@ -19,23 +21,26 @@
             }
 
             p{
-                font-size: 1.1rem;
+                font-size: 1rem;
             }
             svg{
-                font-size: 1.4rem;
+                font-size: 2rem;
                 color: #04d438;
             }
         }
     }
     .whatsNotincludedSubContainer{
-        margin: 1rem 0 0 0;
-
+        margin: 1rem;
+        width: 250px;   
         .contentContainer{
-
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            gap: 10px;
             .content{
                 display: flex;
                 align-items: center;
-                gap: 10px;
+                gap: 5px;
                 p{
                     font-size: 1rem;
                     margin:0;
