--- a/client/src/styles/HomeWhatsIncluded.scss
+++ b/client/src/styles/HomeWhatsIncluded.scss
@@ -7,10 +7,14 @@
     margin-top: 2rem;
     margin-bottom: 1rem;
     padding: 0 0.5rem;
+    gap: 10px;
 
     .whatsincludedSubContainer{
         width: 250px;
         margin: 1rem 0 0 0;
+        padding: 1rem;
+        background-color: $primaryModalColor;
+        border-radius: 10px;
         .content{
             margin-top: 10px;
             display: flex;
@@ -30,8 +34,11 @@
         }
     }
     .whatsNotincludedSubContainer{
-        margin: 1rem;
+        margin: 1rem 0 0 0;
         width: 250px;   
+        background-color: $primaryModalColor;
+        border-radius: 10px;
+        padding: 1rem;
         .contentContainer{
             display: flex;
             flex-wrap: wrap;
@@ -41,6 +48,7 @@
                 display: flex;
                 align-items: center;
                 gap: 5px;
+                margin-top: 10px;
                 p{
                     font-size: 1rem;
                     margin:0;
